# Notify-OSD

./: .bzrignore  AUTHORS  Makefile  Makefile.am  NEWS  README  TODO  autogen.sh  configure.in  notify_osd_full.patch
.pc/notify_osd_full_xenial.patch/src/: bubble.c  display.c  stack.c
clutter/: clutter-alpha.c  clutter-debug.h  clutter-fixed.c  clutter-hack.c  clutter-hack.h  clutter-timeline.c  clutter-units.c  test-timeline-dup-frames.c  test-timeline-interpolate.c  test-timeline-rewind.c  test-timeline-smoothness.c  test-timeline.c
data/: Makefile.am  com.canonical.NotifyOSD.gschema.xml  org.freedesktop.Notifications.service.in
data/icons/: Makefile.am
data/icons/scalable/: Makefile.am
debian/: changelog  control  copyright  rules  source_notify-osd.py
debian/patches/: notify_osd_full_xenial.patch  series
debian/tests/: control  upstream
egg/: egg-alpha.c  egg-fixed.c  egg-hack.c  egg-hack.h  test-timeline-dup-frames.c  test-timeline-interpolate.c  test-timeline-rewind.c  test-timeline-smoothness.c  test-timeline.c
examples/: Makefile.am  append-hint-example.c  append-hint-example.cs  append-hint-example.py  icon-only.c  icon-only.cs  icon-only.py  icon-summary-body.c  icon-summary-body.cs  icon-summary.c  icon-summary.cs  icon-updating.c  icon-value.c  icon-value.cs  icon-value.py  make-all.sh  summary-body.c  summary-body.cs  summary-only.c  summary-only.cs  sync-icon-only.c  sync-icon-only.cs  sync-icon-only.py  update-notifications.c  update-notifications.cs  update-notifications.py
manual-tests/: average-background-color.txt  avoid-position-in-invisible-area.txt
src/: Makefile.am  apport.c  apport.h  bubble-accessible-factory.c  bubble-accessible-factory.h  bubble-accessible.c  bubble-accessible.h  bubble-window-accessible-factory.c  bubble-window-accessible-factory.h  bubble-window-accessible.c  bubble-window-accessible.h  bubble-window.c  bubble-window.h  bubble.c  bubble.h  dbus-link.py  dbus.c  dbus.h  defaults.c  defaults.h  dialog.c  display.c  dnd.c  dnd.h  exponential-blur.c  log.c  log.h  main.c  mytest.py  notification.c  notification.h  observer.c  observer.h  python.c  python.h  raico-blur.c  send-test-notification.sh  stack-display.c  stack-display.h  stack.c  (+7 more)
tests/: Makefile.am  notifyosd.py  test-alpha-animation.c  test-apport.c  test-bubble.c  test-bubble.h  test-dbus.c  test-defaults.c  test-defaults.h  test-dnd.c  test-grow-bubble.c  test-i18n.c  test-modules-main.c  test-notification.c  test-observer.c  test-observer.h  test-raico.c  test-scroll-text.c  test-stack.c  test-stack.h  test-synchronous.c  test-text-filtering.c  test-tile.c  test-timings.c  test-withlib.c
