AC_INIT(alsdorf, 0.1, dx-team@canonical.com)

AC_CONFIG_SRCDIR(src/main.c)
AC_CONFIG_HEADERS(config.h)
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE
GNOME_COMMON_INIT
GNOME_COMPILE_WARNINGS(maximum)

AM_MAINTAINER_MODE
AM_DISABLE_STATIC
AM_PROG_LIBTOOL
AC_SUBST(ACLOCAL_AMFLAGS, "$ACLOCAL_FLAGS -I m4")
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_INSTALL

#
# pkg-config
#
PKG_PROG_PKG_CONFIG

#
# glib, we need 2.16.0 for the unit-tests
#
PKG_CHECK_MODULES([GLIB], [glib-2.0 >= 2.16.0 gthread-2.0])

#
# dbus
#
PKG_CHECK_MODULES([DBUS], [dbus-glib-1 >= 0.76])
DBUS_GLIB_BIN="`$PKG_CONFIG --variable=exec_prefix dbus-glib-1`/bin"
AC_SUBST(DBUS_GLIB_BIN)

#
# Gnome/GTK checks
#

AM_PATH_GTK_2_0


PKG_CHECK_MODULES(alsdorf, 
		  gtk+-2.0 >= 2.6
		  libgnome-menu >= 2.18)
AC_SUBST(ALSDORF_CFLAGS)
AC_SUBST(ALSDORF_LIBS)
# example python module
# AM_CHECK_PYMOD(gobject)

AC_OUTPUT([
Makefile
src/Makefile
tests/Makefile
data/Makefile
])
